<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ASUAndroid</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="new_uniform">New Uniform</string>
    <string name="bar_logo">bar logo</string>
    <string name="Build">Build Uniform</string>
    <string name="continue_to_third">Continue</string>
    <string name="return_home">Return Home</string>
    <string name="closet">Closet</string>
    <string name="main_screen_image">primaryScreen</string>
    <string name="previous">Back</string>
    <string name="yis">Years Active</string>
    <string name="rank">Rank</string>
    <string name="branch">Branch</string>
    <string name="gender">Gender</string>
    <string name="whatever_you_want">Sup</string>
    <string name="This">Page 2</string>
    <string name="Awards">Ribbons And Awards  </string>
    <string name="Badges">Badges ></string>
    <string name="CombatService">Combat Service ID Badge </string>
    <string name="ServiceStripes">Service Stripes </string>
    <string name="OverSeas">Overseas service bars </string>
    <string name="Regimental">Regimental Insignia </string>
    <string name="IdentificationBadge">Identification Badge </string>

    <!--Award Fragment -->
    <string name="toRackInspection">Continue </string>

    <!--Uniform Presentation Fragment -->
    <string name="saveUniform"> Save In My Wardrobe </string>

    <!-- String for ribbonReference objects -->
    <string name="ref1">ic_medal_of_honor_ribbon</string>
    <string name="ref2">ic_distinguished_service_cross_ribbon</string>
    <string name="ref3">ic_defense_distinguished_service_medal_ribbon</string>
    <string name="ref4">ic_homeland_security_distinguished_service_medal_ribbon</string>
    <string name="ref5">ic_army_distinguished_service_medal_ribbon</string>

    <!-- Strings used ribbons -->
    <string name="r1"> Medal of Honor</string>
    <string name="r2">Army Distinguished Service Cross</string>
    <string name="r3">Defense Distinguished Service</string>
    <string name="r4">Homeland Security Distinguished Service Medal</string>
    <string name="r5">Army Distinguished Service</string>
    <string name="r6">Silver Star</string>
    <string name="r7">Defense Superior Service</string>
    <string name="r8">Legion of Merit</string>
    <string name="r9">Distinguished Flying Cross</string>
    <string name="r10">Soldiers Medal</string>
    <string name="r11">Bronze Star</string>
    <string name="r12">Purple Heart</string>
    <string name="r13">Defense Meritorious Service</string>
    <string name="r14">Meritorious Service</string>
    <string name="r15">Air Medal</string>
    <string name="r16">Joint Service Commendation</string>
    <string name="r17">Army Commendation</string>
    <string name="r18">Joint Service Achievement</string>
    <string name="r19">Army Achievement</string>
    <string name="r20">Army Presidential Unit Citation</string>
    <string name="r21">Joint Service Meritorious Unit</string>
    <string name="r22">Army Valorous Unit Award</string>
    <string name="r23">Army Meritorious Unit Commendation</string>
    <string name="r24">Army Superior Unit Award</string>
    <string name="r25">Prisoner of War</string>
    <string name="r26">Army Good Conduct</string>
    <string name="r27">Army Reserve Components Achievement</string>
    <string name="r28">American Defense Service</string>
    <string name="r29">American Campaign</string>
    <string name="r30">Asiatic Pacific Service</string>
    <string name="r31">European African Middle Eastern Campaign Medal</string>
    <string name="r32">World War II Victory Medal</string>
    <string name="r33">Army Occupation</string>
    <string name="r34">Humane Action</string>
    <string name="r35">National Defense Service Medal</string>
    <string name="r36">Korea Service Medal</string>
    <string name="r37">Antarctica Service</string>
    <string name="r38">Armed Forces Expeditionary Medal</string>
    <string name="r39">Vietnam Service Medal</string>
    <string name="r40">Southwest Asia Service Medal</string>
    <string name="r41">Kosovo Campaign Medal</string>
    <string name="r42">Afghanistan Campaign Medal</string>
    <string name="r43">Iraq Campaign Medal</string>
    <string name="r44">Inherent Resolve Campaign Medal</string>
    <string name="r45">Global War on Terrorism Expeditionary</string>
    <string name="r46">Global War Terrorism Service</string>
    <string name="r47">Korea Defense Service Medal</string>
    <string name="r48">Armed Forces Service</string>
    <string name="r49">Humanitarian Service Medal</string>
    <string name="r50">Humanitarian Service Medal</string>
    <string name="r51">Army Sea Duty</string>
    <string name="r52">Armed Forces Reserve</string>
    <string name="r53">NCO Professional Development</string>
    <string name="r54">Army Service</string>
    <string name="r55">Arctic Service</string>
    <string name="r56">Army Overseas Service</string>
    <string name="r57">Army Reserve Componenets Overseas</string>
    <string name="r58">Vietnam Gallantry Cross</string>
    <string name="r59">Vietnam Armed Forces Honor 1C</string>
    <string name="r60">Vietnam Armed Forces Honor 2C</string>
    <string name="r61">Vietnam Civil Action 1C</string>
    <string name="r62">Vietnam Civil Action 2C</string>
    <string name="r63">Philippines Republic Presidential Unit Citation</string>
    <string name="r64">Republic of Korea Presidential Unit Citation</string>
    <string name="r65">Republic of Vietnam Presidential Unit Citation</string>
    <string name="r66">Republic of Vietnam Gallantry Cross Unit Citation</string>
    <string name="r67">Republic of Vietnam Civil Action</string>
    <string name="r68">Philippine Defence</string>
    <string name="r69">Philippine Liberation</string>
    <string name="r70">Philippine Independence</string>
    <string name="r71">Korea Services United Nations</string>
    <string name="r72">United Nations Medal</string>
    <string name="r73">Nato Medal Meritorious</string>
    <string name="r74">Nato Bosnia</string>
    <string name="r75">Nato Kosovo</string>
    <string name="r76">Nato Non Article 5</string>
    <string name="r77">Nato ISAF</string>
    <string name="r78">Multinational Forces and Observers Medal</string>
    <string name="r79">Inter American Defense Board Medal</string>
    <string name="r80">Republic of Vietnam Campaign</string>
    <string name="r81">Kuwait Liberation Saudi Arabia</string>
    <string name="r82">Kuwait Liberation Kuwait</string>
    <string name="r83">Republic of Korea Service</string>
    <string name="r84">Army Presidential Unit Citation</string>
    <string name="r85">Navy Marine Corps Presidential Unit Citation</string>
    <string name="r86">Joint Service Meritorious Unit</string>
    <string name="r87">Army Valorous Unit Award</string>
    <string name="r88">Army Meritorious Unit Commendation</string>
    <string name="r89">Navy Unit Commendation</string>
    <string name="r90">Air Force Outstanding Unit Award</string>
    <string name="r91">Coast Guard Unit Commendation</string>
    <string name="r92">Army Superior Unit Award</string>
    <string name="r93">Navy Meritorious Unit Commendation</string>
    <string name="r94">Navy E Ribbon</string>
    <string name="r95">Air Force Organizational Excellence Award</string>
    <string name="r96">Coast Guard Meritorious Unit Commendation</string>
    <string name="r97">Philippines Republic Presidential Unit</string>
    <string name="r98">Republic of Korea Presidential Unit</string>
    <string name="r99">Republic of Vietnam Presidential Unit</string>

    <string-array name="ranks_array">
        <item>Private</item>
        <item>Private First Class</item>
        <item>Corporal</item>
        <item>Specialist</item>
        <item>Sergeant</item>
        <item>Staff Sergeant</item>
        <item>Sergeant First Class</item>
        <item>First Sergeant</item>
        <item>Sergeant Major</item>
        <item>2nd Lieutenant</item>
        <item>1st Lieutenant</item>
        <item>Captain</item>
        <item>Major</item>
        <item>Leutinent Colonol</item>
        <item>Colonol</item>
    </string-array>

    <string-array name="branch_array">
        <item>Combat Arms Branches</item>
        <item>Combat Support Branches</item>
        <item>Combat Services Support Branches</item>
        <item>Special Branches</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer Not To Say</item>
        <item>Gender Non Binary</item>
    </string-array>

    <string-array name="years_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
    </string-array>

    <string-array name="fragments">
        <item>Fragment One</item>
        <item>Fragment Two</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="select_badges">SELECT YOUR BADGES</string>
    <string name="select_ribbons">SELECT YOUR RIBBONS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort">Sort</string>
</resources>