<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UniformFragment" >

    <Button
        android:id="@+id/btn_ribbons"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="@string/Awards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <Button
        android:id="@+id/btn_badges"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="@string/Badges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ribbons" />

    <Button
        android:id="@+id/btn_combatService"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="@string/CombatService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_badges" />

    <Button
        android:id="@+id/btn_identificationbadge"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="@string/IdentificationBadge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_combatService" />

    <Button
        android:id="@+id/button8"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="@string/OverSeas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_identificationbadge" />

    <Button
        android:id="@+id/btn_serviceStripes"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="@string/ServiceStripes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/btn_insignia"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="@string/Regimental"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_serviceStripes" />
</androidx.constraintlayout.widget.ConstraintLayout>